--- a/css/theme/template/theme.scss
+++ b/css/theme/template/theme.scss
@@ -14,9 +14,9 @@ body {
 	// background: -webkit-linear-gradient(to bottom, #fff9f9, #EC5973);  /* Chrome 10-25, Safari 5.1-6 */
 	// background: linear-gradient(to bottom, #fff9f9, #EC5973); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-	background: #ff6e7f;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to bottom, #bfe9ff, #ff6e7f);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to bottom, #bfe9ff, #ff6e7f); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	background: #fd939f;  /* fallback for old browsers */
+	background: -webkit-linear-gradient(to bottom, #bfe9ff, #fd939f);  /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to bottom, #bfe9ff, #fd939f); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 
 }
@@ -173,9 +173,11 @@ body {
 	margin: $blockMargin auto;
 
 	text-align: left;
-	font-size: 0.55em;
+	// font-size: 0.55em;
 	font-family: $codeFont;
-	line-height: 1.2em;
+	// line-height: 1.2em;
+	font-size: 16px;
+  line-height: 22px;
 
 	word-wrap: break-word;
 
@@ -238,13 +240,13 @@ body {
 
 .reveal small {
 	display: inline-block;
-	font-size: 0.6em;
+	font-size: 0.4em;
 	line-height: 1.2em;
-	vertical-align: top;
+	vertical-align: middle;
 }
 
 .reveal small * {
-	vertical-align: top;
+	vertical-align: middle;
 }
 
 
